--- a/VUE案例/1-vue入门案例/1-入门案例.html
+++ b/VUE案例/1-vue入门案例/1-入门案例.html
@@ -14,6 +14,12 @@
 			//1. const   定义常量
 			//2. let     有作用域的变量声明
 			
+			//1.实例化VUE对象  函数式编程
+			const app = new Vue({
+				
+			})
+			
+			
 		</script>
 	</body>
 </html>
