--- a/VUE案例/1-vue入门案例/1-入门案例.html
+++ b/VUE案例/1-vue入门案例/1-入门案例.html
@@ -5,21 +5,31 @@
 		<title>VUE入门案例</title>
 	</head>
 	<body>
+		
+		<div id="app">
+			<!-- 插值表达式 内容 data中对象的属性 -->
+			<h1>{{hello}}</h1>
+		</div>
+		
 		<!-- 1.导入vue.js的类库 -->
 		<script src="../js/vue.js"></script>
-		<!-- 2.编辑VUE.js -->
+		<!-- 2.编辑VUE js -->
 		<script>
-			//新规定:1.结尾的 ; 号可以省略  2.字符一般使用 '单引号'
-			//补充知识: var:  js中声明变量的修饰符  没有作用域的概念
-			//1. const   定义常量
-			//2. let     有作用域的变量声明
+			//新规定:  1.结尾的;号可以省略   2.字符一般使用'单引号'
+			//补充知识:  var: js中声明变量的修饰符 没有作用域的概念
+			//    1.const 定义常量的
+			//    2.let   有作用域的变量声明.
 			
-			//1.实例化VUE对象  函数式编程
+			//1.实例化VUE对象   函数式编程
 			const app = new Vue({
-				
+				//1.定义el元素 要在哪个位置使用vue进行渲染
+				el: "#app",
+				//2.定义数据对象
+				data: {
+					hello: 'VUE入门案例!!!!'
+				}
 			})
-			
-			
 		</script>
+		
 	</body>
 </html>
