--- a/VUE案例/12-axios/userList.html
+++ b/VUE案例/12-axios/userList.html
@@ -7,6 +7,12 @@
 	</head>
 	<body>
 		<div id="app">
+			ID:<input type="text" disabled v-model="user.id"/>
+			姓名:<input type="text"  v-model="user.name"/>
+			年龄:<input type="text"  v-model="user.age"/>
+			性别:<input type="text"  v-model="user.sex"/>
+			<button  @click="updateUser()">提交</button>
+			<hr />
 			<!--准备一个表格-->
 			<table border="1px" align="center" width="600px">
 				<tr>
@@ -27,6 +33,7 @@
 					<th v-text="list.age">年龄</th>
 					<th v-text="list.sex">性别</th>
 					<th>
+						<button type="button" @click="updateUserBtn(list)">修改</button>
 						<button type="button" @click="deleteUser(list.id)">删除</button>
 					</th>
 				</tr>
@@ -42,7 +49,13 @@
 			const app = new Vue({
 				el: "#app",
 				data: {
-					userList:[]
+					userList:[],
+					user:{
+						id:111,
+						name:"你好",
+						age:100,
+						sex:"男"
+					}
 				},
 				methods: {
 					getUserList() {
@@ -56,6 +69,17 @@
 						axios.delete("/deleteUser/"+id)
 						.then()
 						this.getUserList()
+					},
+					updateUserBtn(user){
+						console.log(user)
+						this.user=user
+					},
+					updateUser(){
+						axios.put("/updateUserVUE",this.user)
+						.then(result=>{
+							alert(result.data)
+							this.getUserList()
+						})
 					}
 				},
 				mounted() {
