--- a/VUE案例/13-组件化/111.html
+++ b/VUE案例/13-组件化/111.html
@@ -2,49 +2,43 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>组件化思想</title>
+		<title>组件化</title>
 	</head>
 	<body>
 		<div id="app">
-			<!-- 4.通过组件的名称利用标签进行调用 -->
-			<add-num-com></add-num-com>
 			<add-num-com></add-num-com>
 		</div>
-		
+
 		<!-- 3.定义html模板 -->
 		<template id="addNumTem">
-			<!-- 必须要有跟标签 -->
 			<div>
 				<h1>定义组件</h1>
 				<h3>数值:{{num}}</h3>
 				<button @click="addNum">自增</button>
 			</div>
 		</template>
-		
-		<!-- 1. -->
+
 		<script src="../js/vue.js"></script>
-		<!-- 2.定义组件 -->
 		<script>
-			//2.1创建组件  全局组件
-			Vue.component("addNumCom",{
-				//2.2定义组件内部结构
-				data(){
+			//2.1创建组件
+			Vue.component("addNumCom", {
+				//2.2定义组件的内部结构
+				data() {
 					return {
-						num:0
+						num: 0
 					}
 				},
-				//2.3定义组件的标签体  方式1:字符串拼接
-				template:"#addNumTem",
-				methods:{
-					addNum(){
+				//2.3定义组件的标签体
+				template: "#addNumTem",
+				methods: {
+					addNum() {
 						this.num++
 					}
 				}
 			})
-			
-			//3.定义Vue对象
+
 			const app = new Vue({
-				el:"#app"
+				el: "#app"
 			})
 		</script>
 	</body>
